hphp/test/zend/bad/bug39602.php
<?php
ini_set("session.save_handler","files");
$x = new stdClass();
echo "ok";
?>